[package]
name = "yarb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
regex = "1.10.4"
sqlite = {version= "0.36.0",features = ["bundled"]}
tokio = {version = "1.38.0", features = ["rt", "macros", "rt-multi-thread"]}
twilight = "0.15.1"
twilight-cache = "0.0.0"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-standby = "0.15.4"
